# your5e

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/rules/: README.md
docs/rules/directives/: ability_score.md  action.md  break.md  choice.md  choose.md  featureless.md  inventory.md  language.md  proficiency.md  register.md  resource.md  set.md
rules/: README.md
rules/directives/: hit_die.md
tests/: test_cli.bats  test_rules.py  test_rules_cli.bats  test_rules_directive_ability_score.py  test_rules_directive_action.py  test_rules_directive_choice.py  test_rules_directive_choose.py  test_rules_directive_featureless.py  test_rules_directive_hit_die.py  test_rules_directive_inventory.py  test_rules_directive_language.py  test_rules_directive_proficiency.py  test_rules_directive_register.py  test_rules_directive_resource.py  test_rules_directive_set.py  test_rules_directives_choose.py  test_rules_directives_inventory.py  utils.py
tests/rules/: all_good.md  example.md  example_directives.txt  example_stripped.md
tests/rules/directives/: ability_score.errors.toml  ability_score.toml  action.errors.toml  action.toml  choice.errors.toml  choice.toml  choose.errors.toml  choose.toml  featureless.errors.toml  featureless.toml  hit_die.errors.toml  hit_die.no-context.txt  hit_die.toml  hit_die.txt  hit_die.verbose.txt  inventory.errors.toml  inventory.toml  language.errors.toml  language.toml  multiple-files.txt  proficiency.errors.toml  (+7 more)
your5e/: __init__.py  cli.py
your5e/commands/: check_rules.py
your5e/rules/: __init__.py
(+21 files in other folders)
